--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,8 @@ tmp/*
 doc/api
 doc/app
 doc/*
-.yardoc/ # for YARD
+/.yardoc # for YARD
+.yardopts
 
 # Comment out these rules if you are OK with secrets being uploaded to the repo
 config/initializers/secret_token.rb
